trunk/OldArchive/ffd51b3bec270304ed52989224a51dbf-90a61a4eab3434f530b48fef6c227a59/output
main.cpp: In function 'int main()':
main.cpp:28:56: error: invalid user-defined conversion from 'std::basic_ostream<char>::__ostream_type {aka std::basic_ostream<char>}' to 'int' [-fpermissive]
     return std::cout << GetArea(Width(20), Height(30)) << std::endl;
                                                        ^
In file included from /usr/local/include/c++/4.8.0/ios:44:0,
                 from /usr/local/include/c++/4.8.0/ostream:38,
                 from /usr/local/include/c++/4.8.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.8.0/bits/basic_ios.h:115:7: note: candidate is: std::basic_ios<_CharT, _Traits>::operator void*() const [with _CharT = char; _Traits = std::char_traits<char>] <near match>
       operator void*() const
       ^
/usr/local/include/c++/4.8.0/bits/basic_ios.h:115:7: note:   no known conversion for implicit 'this' parameter from 'void*' to 'int'
1
